--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,6 @@
+/* Google fonts import - Bungee and Passion One fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Passion+One:wght@400;700;900&display=swap');
+
 body {
     background-color: #0d0221;
 }
