--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,15 @@
 /* Google fonts import - Bungee and Passion One fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Bungee&family=Passion+One:wght@400;700;900&display=swap');
 
+/* Variables used for colours */
+:root {
+    --red: #FF595E;
+    --yellow: #FFCA3A;
+    --green: #8AC926;
+    --blue: #1982C4;
+    --purple: #6A4C93;
+}
+
 /* Wildcard selector to override default styles */
 * {
     padding: 0;
@@ -23,3 +32,34 @@ h1, h2, h3, h4 {
 }
 
 /* Header */
+
+header{
+    padding: 5px, 10px;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 2px solid var(--red);
+    border-bottom: 2px solid var(--purple);
+    border-left: 2px solid var(--yellow);
+    border-right: 2px solid var(--green);
+}
+
+.header-text {
+    text-align: center;
+}
+
+/* Main content */
+main {
+    flex: 1 0 auto;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+}
+
+.hidden {
+    display: none;
+}
