--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,7 +20,6 @@
 }
 
 /* General Styles */
-
 body {
     min-height: 100vh;
     display: flex;
@@ -46,8 +45,24 @@ h4 {
     background-color: var(--blue);
 }
 
-/* Header */
+h2 {
+    line-height: 30px;
+    text-align: center;
+    margin: 10px 0;
+}
 
+.passion-font{
+    font-family: "Passion One", sans-serif;
+    font-size: 1rem;
+    letter-spacing: 1px;
+}
+
+.input-colour{
+    background-color: var(--deep-blue);
+    color: var(--off-white);
+}
+
+/* Header */
 header {
     position: fixed;
     z-index: 99;
@@ -79,15 +94,7 @@ main {
     display: none;
 }
 
-/* Welcome section */
-
-.quiz-logo {
-    max-width: 100px;
-    align-self: center;
-    margin: 20px;
-}
-
-#welcome-section {
+section {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -95,16 +102,18 @@ main {
     height: 100%;
 }
 
-#welcome-message>h2 {
-    line-height: 30px;
-    text-align: center;
-    margin: 10px 0;
+/* Welcome section */
+.quiz-logo {
+    max-width: 100px;
+    align-self: center;
+    margin: 20px;
+}
+
+#welcome-section {
+    display: none;
 }
 
 #welcome-message>p {
-    font-family: "Passion One", sans-serif;
-    font-size: 1rem;
-    letter-spacing: 1px;
     text-align: center;
     padding: 5px;
     margin-bottom: 10px;
@@ -121,9 +130,8 @@ main {
     border-radius: 5px;
     height: 35px;
     width: 40%;
-    background-color: var(--deep-blue);
-    color: var(--off-white);
     font-weight: bold;
+    font-size: 0.9rem;
 }
 
 #choose-quiz-btn {
@@ -134,8 +142,54 @@ main {
     border: 2px solid var(--yellow);
 }
 
+/* Choices section */
+#choices-section {
+    display: flex;
+    color: var(--off-white);
+}
+
+#choices-form {
+    min-height: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    color: var(--off-white);
+}
+
+#choices-form>label,
+#choices-form>fieldset>legend{
+    font-size: 1.2rem;
+}
+
+#choices-form>input,
+#choices-form>select {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+#question-amount{
+    border: 2px solid var(--green);
+}
+
+#category-choice {
+    border: 2px solid var(--red);
+}
+
+#difficulty {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    border: 2px solid var(--purple);
+}
+
+#choices-submit{
+    border: 2px solid var(--yellow);
+    font-size: 1.2rem;
+}
+
+/* Media query: tablet size screens and above(min 768px) */
 @media screen and (min-width: 768px) {
-    
+
     /* General styles */
     .blue-line {
         height: 4px;
@@ -160,7 +214,6 @@ main {
     }
 
     /* Welcome Section */
-
     #welcome-section {
         max-width: 80%;
         align-self: center;
@@ -182,5 +235,5 @@ main {
     #quiz-mode-buttons>button {
         font-size: 1.5em;
         max-width: 300px;
-     }
+    }
 }
