--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,6 +39,18 @@ h4 {
     height: calc(100vh - 50px);
 }
 
+.hidden {
+    display: none;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 10px;
+    height: 100%;
+}
+
 .blue-line {
     border: none;
     height: 2px;
@@ -51,15 +63,10 @@ h2 {
     margin: 10px 0;
 }
 
-.passion-font{
+.passion-font {
     font-family: "Passion One", sans-serif;
     font-size: 1rem;
     letter-spacing: 1px;
-}
-
-.input-colour{
-    background-color: var(--deep-blue);
-    color: var(--off-white);
 }
 
 /* Header */
@@ -90,24 +97,18 @@ main {
     flex-direction: column;
 }
 
-.hidden {
-    display: none;
-}
-
-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    padding: 10px;
-    height: 100%;
-}
-
-/* Welcome section */
 .quiz-logo {
     max-width: 100px;
     align-self: center;
     margin: 20px;
 }
+
+.input-colour {
+    background-color: var(--deep-blue);
+    color: var(--off-white);
+}
+
+/* Welcome section */
 
 #welcome-section {
     display: none;
@@ -158,7 +159,7 @@ section {
 }
 
 #choices-form>label,
-#choices-form>fieldset>legend{
+#choices-form>fieldset>legend {
     font-size: 1.2rem;
 }
 
@@ -166,9 +167,15 @@ section {
 #choices-form>select {
     margin-bottom: 10px;
     text-align: center;
+    border-radius: 5px;
 }
 
-#question-amount{
+#choices-form>fieldset,
+#submit-choices {
+    border-radius: 5px;
+}
+
+#question-amount {
     border: 2px solid var(--green);
 }
 
@@ -176,13 +183,13 @@ section {
     border: 2px solid var(--red);
 }
 
-#difficulty {
+#difficulty-choice {
     margin-top: 10px;
     margin-bottom: 20px;
     border: 2px solid var(--purple);
 }
 
-#choices-submit{
+#submit-choices {
     border: 2px solid var(--yellow);
     font-size: 1.2rem;
 }
@@ -215,7 +222,7 @@ section {
 
     /* Welcome Section */
     #welcome-section {
-        max-width: 80%;
+        width: 80%;
         align-self: center;
     }
 
@@ -235,5 +242,32 @@ section {
     #quiz-mode-buttons>button {
         font-size: 1.5em;
         max-width: 300px;
+    }
+
+    /* Choices section */
+    #choices-section {
+        width: 80%;
+        align-self: center;
+    }
+
+    #choices-form {
+        width: 300px;
+        align-self: center;
+    }
+
+    #choices-section>h2 {
+        font-size: 2.5rem;
+    }
+
+    #choices-form>label,
+    #choices-form>fieldset>legend,
+    #submit-choices {
+        font-size: 1.8rem;
+    }
+
+    #question-amount,
+    #difficulty-choice,
+    #category-choice {
+        font-size: 1.5rem;
     }
 }
