--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -204,12 +204,12 @@ main {
     flex-direction: column;
     height: 40%;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 #user-name {
-    max-width: 350px;
+    max-width: 250px;
     height: 35px;
-    align-self: center;
     text-align: center;
     border: 2px solid var(--purple);
 }
@@ -383,10 +383,20 @@ main {
         font-size: 2.5rem;
     }
 
+    #ready-area>label {
+        font-size: 1.5rem;
+    }
+
     #play-btn {
         min-width: 300px;
         min-height: 50px;
         font-size: 2rem;
+    }
+
+    #user-name {
+        min-width: 350px;
+        min-height: 50px;
+        font-size: 1.5rem;
     }
 
     #game-area>h4 {
