--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -148,6 +148,7 @@ main {
     height: 35px;
     align-self: center;
     border: 2px solid var(--purple);
+    margin-bottom: 15px;
 }
 
 /* Choices section */
