Change high-score mode name to -marathon mode- and change form button colour styling

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -194,7 +194,7 @@ main {
 }
 
 #question-amount {
-    border: 2px solid var(--green);
+    border: 2px solid var(--yellow);
 }
 
 #category-choice {
@@ -209,7 +209,8 @@ main {
 }
 
 #submit-choices {
-    border: 2px solid var(--yellow);
+    border: 2px solid var(--green);
+    color: var(--green);
     font-size: 2rem;
     height: 35px;
 }
